--- a/app/src/main/res/layout/fragment_company.xml
+++ b/app/src/main/res/layout/fragment_company.xml
@@ -16,57 +16,75 @@
 
             <ImageView
                     android:layout_width="100dp"
-                    android:layout_height="100dp" app:srcCompat="@drawable/launch_logo"
+                    android:layout_height="100dp"
+                    app:srcCompat="@drawable/launch_logo"
                     android:id="@+id/image_logo"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintTop_toTopOf="parent"/>
             <TextView
-                    android:text="SpaceX"
+                    android:text="@string/title_spacex"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/text_SpaceX" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/image_logo" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:id="@+id/text_SpaceX"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/image_logo"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
             <TextView
-                    android:text="Summary"
+                    android:text="@string/title_summary"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/text_summary"
                     android:textAlignment="center"
-                    tools:text="SpaceX designs, manufactures and launches advanced rockets and spacecraft. The company was founded in 2002 to revolutionize space technology, with the ultimate goal of enabling people to live on other planets."
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_founder"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
-            <TextView
-                    android:text="Founded by Elon Musk"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/text_founder" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/text_SpaceX" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    tools:text="SpaceX designs, manufactures and launches advanced rockets
+                    and spacecraft. The company was founded in 2002 to revolutionize space
+                    technology, with the ultimate goal of enabling people to live on other planets."
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_founder"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"/>
             <TextView
-                    android:text="Resources"
+                    android:text="@string/founded_by_elon_musk"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/text_resources_title" android:layout_marginTop="16dp"
+                    android:id="@+id/text_founder"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_SpaceX"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"/>
+            <TextView
+                    android:text="@string/title_resources"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_resources_title"
+                    android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@+id/text_summary"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
             <TextView
-                    android:text="employees"
+                    android:text="@string/title_employees"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/text_title_employees"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_resources_title"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_resources_title"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/text_employees" android:layout_marginEnd="16dp"/>
+                    app:layout_constraintEnd_toStartOf="@+id/text_employees"
+                    android:layout_marginEnd="16dp"/>
             <TextView
                     android:text="0"
                     android:layout_width="wrap_content"
@@ -75,14 +93,16 @@
                     android:textColor="@color/colorSecondary"
                     app:layout_constraintTop_toTopOf="@+id/text_title_employees"
                     app:layout_constraintStart_toEndOf="@+id/text_title_employees"
-                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintEnd_toEndOf="parent"
                     tools:text="7000"
                     android:layout_marginStart="16dp"/>
             <TextView
-                    android:text="vehicles"
+                    android:text="@string/title_vehicles"
                     android:layout_width="wrap_content"
                     android:layout_height="18dp"
-                    android:id="@+id/text_title_vehicles" android:layout_marginTop="8dp"
+                    android:id="@+id/text_title_vehicles"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/text_title_employees"
                     app:layout_constraintStart_toStartOf="@+id/text_title_employees"/>
             <TextView
@@ -91,14 +111,16 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/text_vehicles"
                     android:textColor="@color/colorSecondary"
-                    app:layout_constraintTop_toTopOf="@+id/text_title_vehicles" tools:text="3"
+                    app:layout_constraintTop_toTopOf="@+id/text_title_vehicles"
+                    tools:text="3"
                     app:layout_constraintEnd_toEndOf="@+id/text_employees"/>
             <TextView
-                    android:text="launch sites"
+                    android:text="@string/title_launch_sites"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/text_title_launch_sites"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_title_vehicles"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_title_vehicles"
                     app:layout_constraintStart_toStartOf="@+id/text_title_vehicles"/>
             <TextView
                     android:text="0"
@@ -106,13 +128,15 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/text_launch_sites"
                     android:textColor="@color/colorSecondary"
-                    app:layout_constraintTop_toTopOf="@+id/text_title_launch_sites" tools:text="3"
+                    app:layout_constraintTop_toTopOf="@+id/text_title_launch_sites"
+                    tools:text="3"
                     app:layout_constraintEnd_toEndOf="@+id/text_vehicles"/>
             <TextView
-                    android:text="test sites"
+                    android:text="@string/title_test_sites"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/text_title_test_sites" android:layout_marginTop="8dp"
+                    android:id="@+id/text_title_test_sites"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/text_title_launch_sites"
                     app:layout_constraintStart_toStartOf="@+id/text_title_launch_sites"/>
             <TextView
@@ -122,15 +146,19 @@
                     android:id="@+id/text_test_sites"
                     android:textColor="@color/colorSecondary"
                     app:layout_constraintTop_toTopOf="@+id/text_title_test_sites"
-                    app:layout_constraintEnd_toEndOf="@+id/text_launch_sites" tools:text="1"/>
+                    app:layout_constraintEnd_toEndOf="@+id/text_launch_sites"
+                    tools:text="1"/>
             <TextView
-                    android:text="Valuation"
+                    android:text="@string/title_valuation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/text_title_valuation" android:layout_marginTop="16dp"
+                    android:id="@+id/text_title_valuation"
+                    android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@+id/text_title_test_sites"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
             <TextView
                     android:text="0"
@@ -141,37 +169,47 @@
                     android:textStyle="bold"
                     android:textColor="@color/colorSecondary"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/text_title_valuation" android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_title_valuation"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"/>
             <TextView
-                    android:text="Headquarters"
+                    android:text="@string/title_headquarters"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/text_title_headquarters" android:layout_marginTop="16dp"
+                    android:id="@+id/text_title_headquarters"
+                    android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@+id/text_valuation"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
             <TextView
                     android:text="TextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/text_address" android:layout_marginTop="8dp"
+                    android:id="@+id/text_address"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/text_title_headquarters"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" tools:text="Rocket Road"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" tools:text="Rocket Road"/>
             <TextView
                     android:text="TextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/text_city" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                    android:id="@+id/text_city"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/text_address" tools:text="Hawthorne"/>
             <TextView
-                    android:text="city"
+                    android:text="@string/title_city"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/text_state"
