Add settings for theme change, listen to changes in MainActivity

--- a/app/src/main/res/xml/app_preferences.xml
+++ b/app/src/main/res/xml/app_preferences.xml
@@ -13,6 +13,13 @@
                 android:entryValues="@array/settings_refresh_interval_values"
                 android:defaultValue="3"/>
 
+        <SwitchPreference
+                android:key="prefs_dark_mode"
+                android:title="Dark mode"
+                android:summaryOn="Dark mode enabled"
+                android:summaryOff="Dark mode disabled"
+                android:defaultValue="false"/>
+
     </PreferenceCategory>
 
 </PreferenceScreen>
