Change nav drawer selected item color

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,9 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             app:headerLayout="@layout/nav_view_header"
-            app:menu="@menu/menu_nav_view"/>
-         <!--   app:itemIconTint="@drawable/nav_view_colors"
-            app:itemTextColor="@drawable/nav_view_colors"
-            app:itemBackground="@drawable/nav_view_item_background"/> -->
+            app:menu="@menu/menu_nav_view"
+            app:itemBackground="@drawable/nav_view_item_background"/>
+         <!--app:itemTextColor="@drawable/nav_view_colors"
+             -->
+
 </androidx.drawerlayout.widget.DrawerLayout>
