--- a/app/src/main/res/drawable/nav_view_text_colors.xml
+++ b/app/src/main/res/drawable/nav_view_text_colors.xml
@@ -5,5 +5,5 @@
             android:color="@color/colorOnSecondary"/>
     <item
             android:state_checked="false"
-            android:color="@color/colorOnSecondary"/>
+            android:color="@color/colorOnSurface"/>
 </selector>
