--- a/app/src/main/res/layout/fragment_core_detail.xml
+++ b/app/src/main/res/layout/fragment_core_detail.xml
@@ -13,12 +13,13 @@
 
         <ImageView
                 android:id="@+id/image_core"
-                android:src="@color/colorSecondaryLight"
+                android:src="@drawable/detail_fragment_image_zuma"
                 android:layout_width="0dp"
                 android:layout_height="150dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                android:scaleType="centerCrop"/>
 
         <TextView
                 android:id="@+id/textView13"
