Add initial classes for upcomig launches fragment

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -66,4 +66,7 @@
             android:name="io.github.omisie11.spacexfollower.ui.next_launch.NextLaunchFragment"
             android:label="@string/label_next_launch"
             tools:layout="@layout/fragment_next_launch"/>
+    <fragment android:id="@+id/upcoming_launches_dest"
+              android:name="io.github.omisie11.spacexfollower.ui.upcoming_launches.UpcomingLaunchesFragment"
+              android:label="@string/label_upcoming_launches" tools:layout="@layout/fragment_upcoming_launches"/>
 </navigation>
