--- a/app/src/main/res/menu/menu_nav_view.xml
+++ b/app/src/main/res/menu/menu_nav_view.xml
@@ -7,6 +7,11 @@
             android:checkable="true"/>
 
     <item
+            android:id="@id/upcoming_launches_dest"
+            android:title="@string/label_upcoming_launches"
+            android:checkable="true"/>
+
+    <item
             android:id="@id/capsules_dest"
             android:title="@string/label_capsules"
             android:checkable="true"/>
