--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -66,7 +66,26 @@
             android:name="io.github.omisie11.spacexfollower.ui.next_launch.NextLaunchFragment"
             android:label="@string/label_next_launch"
             tools:layout="@layout/fragment_next_launch"/>
-    <fragment android:id="@+id/upcoming_launches_dest"
-              android:name="io.github.omisie11.spacexfollower.ui.upcoming_launches.UpcomingLaunchesFragment"
-              android:label="@string/label_upcoming_launches" tools:layout="@layout/fragment_recycler"/>
+
+    <fragment
+            android:id="@+id/upcoming_launches_dest"
+            android:name="io.github.omisie11.spacexfollower.ui.upcoming_launches.UpcomingLaunchesFragment"
+            android:label="@string/label_upcoming_launches"
+            tools:layout="@layout/fragment_recycler">
+        <action android:id="@+id/action_upcoming_launches_dest_to_upcomingLaunchesDetailFragment"
+                app:destination="@id/upcoming_launches_detail_dest"
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"/>
+    </fragment>
+
+    <fragment
+            android:id="@+id/upcoming_launches_detail_dest"
+            android:name="io.github.omisie11.spacexfollower.ui.upcoming_launches.UpcomingLaunchesDetailFragment"
+            android:label="@string/label_upcoming_launches_detail"
+            tools:layout="@layout/fragment_upcoming_launches_detail">
+        <argument
+                android:name="itemId"
+                app:argType="integer"
+                android:defaultValue="0"/>
+    </fragment>
 </navigation>
