--- a/app/src/main/res/layout/fragment_capsule_detail.xml
+++ b/app/src/main/res/layout/fragment_capsule_detail.xml
@@ -103,24 +103,23 @@
                 android:layout_marginEnd="8dp"/>
 
         <TextView
+                android:id="@+id/text_capsule_launch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/text_capsule_launch"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView14"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
-                tools:text="2016-02-19"
-                android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"/>
+                tools:text="2016-02-19"/>
 
         <TextView
+                android:id="@+id/textView12"
                 android:text="@string/title_details"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView12"
-                android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="8dp"
@@ -134,6 +133,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/text_capsule_details"
                 android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
