--- a/app/src/main/res/layout/fragment_core_detail.xml
+++ b/app/src/main/res/layout/fragment_core_detail.xml
@@ -103,7 +103,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" tools:text="2016-02-19"
-                android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                 android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView14"/>
 
         <TextView
@@ -111,7 +111,6 @@
                 android:text="Details"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/text_core_launch"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
@@ -123,6 +122,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
