Refresh core list item layout

--- a/app/src/main/res/layout/capsules_recycler_item.xml
+++ b/app/src/main/res/layout/capsules_recycler_item.xml
@@ -39,6 +39,7 @@
             android:id="@+id/text_capsule_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAllCaps="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="8dp"
