--- a/app/src/main/res/layout/cores_recycler_item.xml
+++ b/app/src/main/res/layout/cores_recycler_item.xml
@@ -6,24 +6,32 @@
                 android:layout_height="wrap_content">
 
     <TextView
-            android:id="@+id/text_core_serial"
+            android:id="@+id/text_core_block"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginStart="16dp"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+            tools:text="Block: 1"/>
+
+    <TextView
+            android:id="@+id/text_core_serial"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_core_block"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             tools:text="Merlin1A"/>
 
     <TextView
             android:id="@+id/text_core_launch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_below="@id/text_core_serial"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginStart="16dp"
             android:layout_marginBottom="8dp"
             tools:text="2007-03-21T01:10:00.000Z"/>
 
@@ -31,10 +39,11 @@
             android:id="@+id/text_core_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAllCaps="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            tools:text="expended"/>
+            tools:text="lost"/>
 
 </RelativeLayout>
