--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -10,8 +10,8 @@
     <color name="colorSecondaryDark">#c97b63</color>
     <color name="colorOnSecondary">#212121</color>
 
-    <color name="colorError">#f44336</color>
-    <color name="colorOnError">#ffffff</color>
+    <color name="colorError">#cf6679</color>
+    <color name="colorOnError">#000000</color>
     <color name="colorSurface">#484848</color>
     <color name="colorOnSurface">#ffffff</color>
     <color name="colorBackground">#212121</color>
