--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -17,4 +17,9 @@
     <color name="colorBackground">#212121</color>
     <color name="colorOnBackground">#ffffff</color>
 
+    <color name="colorChipBackgroundUnchecked">#5a5a5a</color>
+    <color name="colorChipBackgroundChecked">@color/colorSecondaryLight</color>
+    <color name="colorChipTextUnchecked">#eaeaea</color>
+    <color name="colorChipTextChecked">#212121</color>
+
 </resources>
