--- a/app/src/main/res/layout/fragment_company.xml
+++ b/app/src/main/res/layout/fragment_company.xml
@@ -2,7 +2,8 @@
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/swipeRefreshLayout"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/swipeRefreshLayout"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content">
 
