Change nav drawer item background - right corners rounded

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,7 @@
             app:headerLayout="@layout/nav_view_header"
             app:menu="@menu/menu_nav_view"
             app:itemBackground="@drawable/nav_view_item_background"
-            app:itemTextColor="@drawable/nav_view_text_colors"/>
+            app:itemIconTint="@color/nav_drawer_item_colors"
+            app:itemTextColor="@color/nav_drawer_text_colors"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
