--- a/app/src/main/res/drawable/nav_view_item_background.xml
+++ b/app/src/main/res/drawable/nav_view_item_background.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:drawable="@color/colorPrimary" />
-    <item android:state_focused="true" android:drawable="@color/colorPrimary" />
-    <item android:state_activated="true" android:drawable="@color/colorSecondaryLight" />
-    <item android:state_checked="true" android:drawable="@color/colorSecondaryLight" />
-    <item android:drawable="@android:color/transparent" />
-</selector>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+            android:right="4dp"
+            android:top="2dp"
+            android:bottom="2dp">
+
+        <shape>
+            <solid android:color="@color/nav_drawer_item_colors"/>
+            <corners android:topRightRadius="20dp"
+                     android:bottomRightRadius="20dp"/>
+        </shape>
+    </item>
+</layer-list>
